--- a/openfisca_barcelona/tests/benefits/GE-051-01.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-01.yaml
@@ -7,7 +7,8 @@
   persones:
    - id: "adult1"
      data_naixement: '1961-01-15'
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      ciutat_empadronament: "Barcelona"
      grau_discapacitat: 34
@@ -32,7 +33,8 @@
   persones:
    - id: "adult1"
      data_naixement: '1961-01-15'
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      ciutat_empadronament: "Barcelona"
      grau_discapacitat: 34
@@ -47,7 +49,8 @@
      beneficiari_ajuts_per_violencia_de_genere: false
    - id: "adult2"
      data_naixement: '1961-01-15'
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      ciutat_empadronament: "Barcelona"
      grau_discapacitat: 34
@@ -71,7 +74,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      grau_discapacitat: 32
      ha_esgotat_prestacio_de_desocupacio: true
@@ -94,7 +98,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      grau_discapacitat: 34
      ha_esgotat_prestacio_de_desocupacio: false
@@ -117,7 +122,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: false
@@ -140,7 +146,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -163,7 +170,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -186,7 +194,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -209,7 +218,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -232,7 +242,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -255,7 +266,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -278,7 +290,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
@@ -301,7 +314,8 @@
      adults: ["adult1"]
   persones:
    - id: "adult1"
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      grau_discapacitat: 34
      situacio_laboral: 'desocupat'
      ha_esgotat_prestacio_de_desocupacio: true
