--- a/openfisca_barcelona/tests/benefits/GE-051-02.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-02.yaml
@@ -7,7 +7,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
      inscrit_com_a_demandant_docupacio: true
@@ -30,7 +31,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1980-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
@@ -53,7 +55,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'treball_compte_daltri_jornada_complerta'
      inscrit_com_a_demandant_docupacio: false
      ha_treballat_a_l_estranger_6_mesos: true
@@ -76,7 +79,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: false
@@ -98,7 +102,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
@@ -121,7 +126,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
@@ -144,7 +150,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      inscrit_com_a_demandant_docupacio: true
      situacio_laboral: 'desocupat'
      ha_treballat_a_l_estranger_6_mesos: true
@@ -166,7 +173,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      inscrit_com_a_demandant_docupacio: true
      situacio_laboral: 'desocupat'
      ha_treballat_a_l_estranger_6_mesos: true
@@ -189,7 +197,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
@@ -211,7 +220,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos: true
@@ -233,7 +243,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: true
      ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: false
@@ -256,7 +267,8 @@
   persones:
    - id: "adult1"
      data_naixement: 1960-01-01
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      inscrit_com_a_demandant_docupacio: false
      ha_treballat_a_l_estranger_6_mesos_i_ha_retornat_en_els_ultims_12_mesos: true
