--- a/openfisca_barcelona/tests/benefits/GE-051-00.yaml
+++ b/openfisca_barcelona/tests/benefits/GE-051-00.yaml
@@ -7,7 +7,8 @@
   persones:
    - id: "adult1"
      data_naixement: '1961-01-15'
-     ingressos_bruts: 500
+     ingressos_bruts:
+      2016: 6000
      situacio_laboral: 'desocupat'
      ciutat_empadronament: "Barcelona"
      grau_discapacitat: 34
