--- a/openfisca_barcelona/tests/benefits/AE-230-1.yaml
+++ b/openfisca_barcelona/tests/benefits/AE-230-1.yaml
@@ -7,7 +7,7 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    tipus_familia_monoparental: 'General'
+    tipus_familia_monoparental: general
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -35,7 +35,7 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    tipus_familia_monoparental: 'General'
+    tipus_familia_monoparental: general
   persones:
    - id: "pare1"
      data_naixement: '1961-01-15'
@@ -63,7 +63,7 @@
     menors: ["infant1"]
     domicili_a_barcelona_ciutat: true
     es_usuari_serveis_socials: true
-    tipus_familia_monoparental: 'No'
+    tipus_familia_monoparental: no
   persones:
     - id: "pare1"
       data_naixement: '1961-01-15'
